# quadwild

./: CMakeLists.txt  FindGUROBI.cmake  PortNote.md
libs/: libs.cmake
libs/quadretopology/: quadretopology.cmake
libs/quadretopology/patterns/: patterns.cmake
